2002-10-29  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerWindow.m ([XGServer -_checkWindowManager]):
	Make sure not to dereference possible NULL pointer.

2002-10-28  Adam Fedor  <fedor@gnu.org>

	* Source/gsc/GSStreamContext.m (-DPSsetalpha:): Use GSsetalpha
	as defined in frontend, for printers that don't support setalpha.

2002-10-27  Adam Fedor  <fedor@gnu.org>

	* Tools/font_cacher.m: Add @end (Reported by Caba Conti
	<520040438669-0001@t-online.de>).

2002-10-21  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XIMInputServer.m
	([XIMInputServer -initWithDelegate:display:name:]): Use
	GSEncodingFromLocale.
	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Idem.
	* Source/xlib/XftFontInfo.m ([XftFontInfo -setupAttributes]): Idem.

2002-10-19  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Don't set desiredFocusWindow to 0.
	([XGServer
	-receivedEvent:type:extra:forMode:] (FocusOut): Hack: if focus
	went nowhere, don't deactivate app.

2002-10-18  Adam Fedor  <fedor@gnu.org>

	* Source/x11/XGServerEvent.m ([XGServer
	-receivedEvent:type:extra:forMode:] (ClientMessage:TAKE_FOCUS)):
	Only send event if we don't have a key window.

2002-10-15 01:37  Alexander Malmberg  <alexander@malmberg.org>

	* Tools/GNUmakefile: Use BUILD_SERVER to decide whether to build
	X specific parts of gpbs or not.

2002-10-13  Adam Fedor  <fedor@gnu.org>

	* Version: 0.8.2.
	* Documentation/news.texi: Update.

Fri Oct 11 00:47:04 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/xlib/XGFont.m ([XGFontInfo -setupAttributes]): Return NO
	if the font can't be loaded.  (Patch by Georg Fleischmann
	<georg@vhf.de>).

2002-10-10  Adam Fedor  <fedor@gnu.org>

	* GNUmakefile.postamble: Only install back.make if building
	as a library.

2002-10-10  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m
	DPSsetdash::: now accepts an empty dash pattern, signaling a reset
	to a solid line.
